[package]
name = "normalize_url"
version = "0.1.1"
authors = ["howei <howeih@gmail.com>"]
edition = "2018"
description = "normalize url"
keywords = ["canonicalize", "normalize", "url"]
repository = "https://github.com/howeih/url_normalizer"
license = "GPL-2.0"
documentation = "https://docs.rs/normalize_url"

[dependencies]
url = "2.1.1"
regex = "1.3.9"